# FIFAWorldCup

./: .firebaserc  .gitignore  LICENSE  README.md  firebase.json  firestore.rules  package-lock.json  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: refresh.yml
data/: locked_predictions.json  paper_ledger.json
scripts/: edge_report.py  export_web.py  fetch_squads.py  paper_trade.py  publish_firestore.py  run_demo.py
src/wcmodel/: __init__.py  config.py  evaluate.py  json_utils.py  predictor.py  teams2026.py  web_export.py
src/wcmodel/app/: streamlit_dashboard.py
src/wcmodel/features/: confederations.py  match_features.py  squad_features.py  team_features.py
src/wcmodel/ingest/: elo.py  get_market_prices.py  get_matches.py  synthetic.py
src/wcmodel/markets/: edge.py  implied.py  opportunities.py  paper_ledger.py  paper_trading.py  shrink.py
src/wcmodel/models/: calibrate.py  elo_logistic.py  ensemble.py  gbm.py  poisson.py
src/wcmodel/simulate/: match.py  tournament.py
tests/: conftest.py  test_calibrate.py  test_elo.py  test_get_matches.py  test_json_utils.py  test_match_features.py  test_poisson.py  test_tournament.py  test_web_export.py
web/public/: app.js  auth.js  fantasy.js  firebase-config.js  index.html  styles.css
web/public/data/: edges.json  history.json  ledger.json  matches.json  meta.json  results.json  scorecard.json  tournament.json
