[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wcmodel"
version = "0.1.0"
description = "Probabilistic 2026 FIFA World Cup forecasting + prediction-market edge detection"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
gbm = ["lightgbm>=4.0"]
dashboard = ["streamlit>=1.30", "matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
